--- a/src/app/component/print-resume/print-resume.component.html
+++ b/src/app/component/print-resume/print-resume.component.html
@@ -1,17 +1,20 @@
 <div class="container mb-3">
     <h2 class="mt-3 text-center">Choose Resume Template</h2>
     <div class="row mt-3">
-        <div class="col-md-4 col-6 resume-design">
+        <div class="col-md-4 col-sm-6 col-12 resume-design">
             <img src="assets/img/resume1.png" alt="resume"> <br>
-            <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(1)">Download</button>
+            <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(1)">Simple</button> &nbsp;
+            <button mat-raised-button color="primary" [disabled]="show" (click)="pResumeDownload(1)">Standard</button>
         </div>
-        <div class="col-md-4 col-6 resume-design">
+        <div class="col-md-4 col-sm-6 col-12 resume-design">
             <img src="assets/img/resume2.png" alt="resume"> <br>
-            <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(2)">Download</button>
+            <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(2)">Simple</button> &nbsp;
+            <button mat-raised-button color="primary" [disabled]="show" (click)="pResumeDownload(2)">Standard</button>
         </div>
-        <div class="col-md-4 col-6 resume-design">
+        <div class="col-md-4 col-sm-6 col-12 resume-design">
             <img src="assets/img/resume3.png" alt="resume"> <br>
-            <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(3)">Download</button>
+            <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(3)">Simple</button> &nbsp;
+            <button mat-raised-button color="primary" [disabled]="show" (click)="pResumeDownload(3)">Standard</button>
         </div>
     </div>
 </div>
