--- a/src/app/component/print-resume/print-resume.component.html
+++ b/src/app/component/print-resume/print-resume.component.html
@@ -1,5 +1,6 @@
 <div class="container mb-3">
     <h2 class="mt-3 text-center">Choose Resume Template</h2>
+    <div class="text-center"><small>Please wait few second after click download button</small></div>
     <div class="row mt-3">
         <div class="col-md-4 col-sm-6 col-12 resume-design">
             <img src="assets/img/resume1.png" alt="resume"> <br>
@@ -21,8 +22,8 @@
 
 <div style="display: none;">
     
-    <div class="bootstrap-wrapper" id="resume1">
-        <div class="container">
+    <div class="bootstrap-wrapper">
+        <div class="container" id="resume1">
             <div class="row">
                 <div class="col-5 pt-2">
                     <div class="text-center mb-2">
@@ -177,8 +178,8 @@
         </div>
     </div>
 
-    <div class="bootstrap-wrapper" id="resume2">
-        <div class="container">
+    <div class="bootstrap-wrapper">
+        <div class="container" id="resume2">
             <div class="cover">
                 <h1 class="name-tag">{{basicDetail.name}}</h1>
                 <img class="photo" [src]="imagePath" alt="my photo">
@@ -352,8 +353,8 @@
         </div>
     </div>
 
-    <div class="bootstrap-wrapper" id="resume3">
-        <div class="container">
+    <div class="bootstrap-wrapper">
+        <div class="container" id="resume3">
             <div class="resume3-cover">
                 <h1 class="name-tag">{{basicDetail.name}}</h1>
                 <img class="resume3-photo" [src]="imagePath" alt="my photo">
