--- a/src/app/component/print-resume/print-resume.component.html
+++ b/src/app/component/print-resume/print-resume.component.html
@@ -18,6 +18,13 @@
             <button mat-raised-button color="primary" [disabled]="show" (click)="pResumeDownload(3)">Standard</button>
         </div>
     </div>
+	<div class="text-justify mt-3 mb-3">
+		<label class="font-weigth-500" style="font-size-16">Note-</label>
+		<ul style="font-size-12">
+			<li>In simple mode, we are using JS library to generate Resume PDf.</li>
+			<li>In standard mode, we are using Java Serve to generate Resume PDf.</li>
+		</ul>
+	</div>
 </div>
 
 <div style="display: none;">
