--- a/src/app/component/print-resume/print-resume.component.html
+++ b/src/app/component/print-resume/print-resume.component.html
@@ -10,19 +10,19 @@
         <div class="col-md-4 col-sm-6 col-12 resume-design">
             <img src="assets/img/resume2.png" alt="resume"> <br>
             <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(2)">Simple</button> &nbsp;
-            <button mat-raised-button color="primary" [disabled]="show" (click)="pResumeDownload(2)">Standard</button>
+            <button mat-raised-button color="primary" [disabled]="true" (click)="pResumeDownload(2)">Standard</button>
         </div>
         <div class="col-md-4 col-sm-6 col-12 resume-design">
             <img src="assets/img/resume3.png" alt="resume"> <br>
             <button mat-raised-button color="accent" [disabled]="show" onclick="resumeDownload(3)">Simple</button> &nbsp;
-            <button mat-raised-button color="primary" [disabled]="show" (click)="pResumeDownload(3)">Standard</button>
+            <button mat-raised-button color="primary" [disabled]="true" (click)="pResumeDownload(3)">Standard</button>
         </div>
     </div>
 	<div class="text-justify mt-3 mb-3">
 		<label class="font-weigth-500" style="font-size-16">Note-</label>
 		<ul style="font-size-12">
-			<li>In simple mode, we are using JS library to generate Resume PDf.</li>
-			<li>In standard mode, we are using Java Serve to generate Resume PDf.</li>
+			<li>In simple mode, we are using JS library to generate Resume Pdf.</li>
+			<li>In standard mode, we are using Java Server to generate Resume Pdf. (BETA)</li>
 		</ul>
 	</div>
 </div>
